2013-November-12 Chris Morley

	* src/main.cpp,src/MesmerConfig.h: Change QACompare() to use .test files
    with same name as .xml file if the -N option used. 
	-N option now does not need to be before xmlfile name.

	* src/MesmerConfig.h: change baseline  folder name for Windows.
	(Why is there no Linux entry?)

	* MesmerQAschema/QA.bat: subsidiary projects like ipropyl_reservoir.xml
	now checked. NOTE: not altered in MesmerQA folder which I shall soon
	replace with the MesmerQAschema folder.

2013-Nov-10 Struan Robertson

	* AnalyticalRepresentation.cpp, System.cpp, CollisionOperator.cpp: 
	Altered analytical representation to fit all reaction data, add reaction 
	expression to Cantera output and write Cantera input to .log file. 

	* HinderedRotorQM1D.cpp: Altered output stream of potential data to
	.test file.

2013-November-3 Chris Morley

	* schemas/mesmerPlugins.xsd: add gaussian EnergyTransferModel
	* src/EnergyTransferModel.h, src/plugins/ExponentialDown.cpp: remove
	  ReadParameters(). (Replaced by ParseData()).
	* src/plugins/GaussianModel.cpp: Rewrite parsing to work with old and
	  new formats.
	* examplesSchema/diamond/diamond-expDown.xml,
	  examplesSchema/diamond/diamond-gaussianModel.xml: made schema friendly.

2013-October 31 Robin Shannon
   *src/System.cpp, System.h, CollisionOperator.cpp, CollisionOpperator.h: 
   Changes to the calculate function for the analytical representation. Also added code to get
   Kp matrix from bartis widom analysis. 

   *src/Plugins/AnalyticalRepresentation.cpp:
   Changes to recognise Bimolecular and Ireversible reactions correctly.

2013-October 31 Robin Shannon

	*src/Plugins/DefinedTunnelingCoefficients.cpp: Refactoring and correcting.


	* src/XMLPersist.cpp: Improve default handling for attributes. The
	element name is now also matched. Allows the default units to be
	depent on the context. 
	* defaults.xml: correct PTpair mis-spelling.

2013-October-26 Struan Robertson
